--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  margin: 0em;
+  margin-left: 0;
+  margin-right: 0;
+  background-color: #d0d1d4;
 }
 
 .App-logo {
@@ -35,4 +38,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Editbtn {
+  position: 'absolute';
+  bottom:0;
+  left: ;
 }
